--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2">
 						<header>
-							<h2>Vestibulum Convallis</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2>고양이 사진들</h2>
+							<p style="color: white;">1. 뱅갈, 2.페르시안, 3.샴, 4.러시안블루</p>
 						</header>
 						<div class="content">
 							<div class="gallery">
@@ -90,8 +90,8 @@
 						</div>
 						<div class="spotlight alt">
 							<div class="image flush">
-								<a href="https://search.pstatic.net/common?type=f&size=260x260&quality=95&direct=true&src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200415_80%2F1586962038950Smlii_JPEG%2F23097648545742622_-1772651208.jpeg" target="_blank"></a>
-								<img src="https://search.pstatic.net/common?type=f&size=260x260&quality=95&direct=true&src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200415_80%2F1586962038950Smlii_JPEG%2F23097648545742622_-1772651208.jpeg" alt="" /></div>
+								<a href="https://search.pstatic.net/common?type=f&size=260x260&quality=95&direct=true&src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200415_80%2F1586962038950Smlii_JPEG%2F23097648545742622_-1772651208.jpeg" target="_blank">
+								<img src="https://search.pstatic.net/common?type=f&size=260x260&quality=95&direct=true&src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200415_80%2F1586962038950Smlii_JPEG%2F23097648545742622_-1772651208.jpeg" alt="" /></a></div>
 							<div  class="inner">
 								<h3>먼 치킨</h3>
 								<p style="color: white;">먼치킨은 도메스틱 고양이와 교잡이 잦았기 때문에 도메스틱 숏헤어와 외형이 비슷합니다. 교잡의 영향으로 여러가지 유전병을 가지고 있는데<br>
@@ -99,10 +99,12 @@
 							</div>
 						</div>
 						<div class="spotlight">
-							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
+							<div class="image flush">
+								<a href="https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%EB%85%B8%EB%A5%B4%EC%9B%A8%EC%9D%B4%EC%88%B2" target="_blank">
+								<img src="https://search.pstatic.net/common?type=f&size=258x260&quality=95&direct=true&src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200309_166%2F1583725050886CTWAw_JPEG%2F19860647745281435_-647047757.jpeg" alt="" /></a></div>
 							<div class="inner">
-								<h3>Morbi Eleifend</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>노르웨이숲</h3>
+								<p>조상 중에 터키나 러시아산의 긴 털 고양이가 섞여 있다는 설이 있다. 수백 년의 세월을 거쳐 북유럽의 혹독한 날씨를 견딜 수 있는 방수성 장모로 진화한 것으로 보인다.<br>성장하는 데에 오래 걸리지만 완전히 어른이 되었을 때의 큼직한 체격은 야성미를 더욱 더해준다.</p>
 							</div>
 						</div>
 					</section>
